samples/kong-url-rewriting.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cache.example.com-api
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/protocols: "https"
    plugins.konghq.com: cache.example.com-url-rewriting
spec:
  rules:
  - http:
      paths:
      - path: /apis/cache.example.com/(.*)
        backend:
          serviceName: kubernetes
          servicePort: 443
